--- a/resources/css/spacing.css
+++ b/resources/css/spacing.css
@@ -1,74 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-}
-
-body {
-  font-size: 14px;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-  transition: 0.1s ease;
-}
-a:hover {
-  color: #ff4a22;
-}
-
-li {
-  list-style: none;
-}
-
-.container {
-  margin: auto;
-  max-width: 1360px;
-}
-.container .section {
-  width: 100%;
-  display: flex;
-  align-content: center;
-  flex-wrap: wrap;
-  margin-bottom: 3rem;
-}
-
-.header {
-  background-color: #111111;
-}
-.header .container {
-  height: 60px;
-  display: flex;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  align-items: center;
-  color: #f8f8ff;
-  text-align: center;
-  background-color: #111111;
-}
-.footer .section {
-  margin-bottom: 1.5rem;
-  display: flex;
-  justify-content: center;
-}
-.footer .footer-link {
-  line-height: 50px;
-}
-@media (max-width: 1400px) {
-  .footer .section {
-    padding: 0 1rem;
-  }
-}
-@media (max-width: 640px) {
-  .footer .section {
-    padding: 0 0.5rem;
-  }
-}
-
 .m-0 {
   margin: 0rem !important;
 }
@@ -383,4 +312,4 @@ li {
   padding-bottom: auto !important;
 }
 
-/*# sourceMappingURL=index.css.map */
+/*# sourceMappingURL=spacing.css.map */
