Create Component GenreMenu - Create GenreMenu Component to show list of genres

--- a/resources/scss/button.scss
+++ b/resources/scss/button.scss
@@ -1,8 +1,5 @@
 @import "__variables";
-
-@mixin hover($color, $property) {
-    #{$property}: darken($color, 15%);
-}
+@import "__function";
 
 .button {
     cursor: pointer;
