Add spacing to Header when on mobile

--- a/resources/css/global.css
+++ b/resources/css/global.css
@@ -54,6 +54,9 @@ li {
   display: flex;
   align-items: center;
 }
+.header .container .section {
+  margin-bottom: 0;
+}
 
 .footer {
   display: flex;
