--- a/resources/scss/global.scss
+++ b/resources/scss/global.scss
@@ -58,6 +58,10 @@ li {
         height: 60px;
         display: flex;
         align-items: center;
+
+        .section {
+            margin-bottom: 0;
+        }
     }
 }
 
