--- a/resources/scss/global.scss
+++ b/resources/scss/global.scss
@@ -26,6 +26,36 @@ li {
     list-style: none;
 }
 
+.disabled {
+    opacity: 0.7;
+}
+
+.line {
+    &-1 {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 1;
+        line-clamp: 1;
+        overflow: hidden;
+    }
+
+    &-2 {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        line-clamp: 2;
+        overflow: hidden;
+    }
+
+    &-3 {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+        line-clamp: 3;
+        overflow: hidden;
+    }
+}
+
 // Container
 .container {
     margin: auto;
