--- a/resources/scss/kontenx.scss
+++ b/resources/scss/kontenx.scss
@@ -1,3 +1,5 @@
+@import "__variables";
+
 .kontenx {
     width: 100%;
 
@@ -31,13 +33,13 @@
 
     &-poster {
         &:hover {
-            color: var(--primary);
+            color: $primary;
         }
 
         &-placeholder {
             position: relative;
             padding-top: 133%;
-            background: var(--surface-gray);
+            background: $surface-gray;
 
             img {
                 position: absolute;
