Add MT Classes in spacing.scss - Forgot to add it last time

--- a/resources/scss/spacing.scss
+++ b/resources/scss/spacing.scss
@@ -51,6 +51,10 @@ $spacing-values: (
     @include single-direction($spacing-values, "margin");
 }
 
+.mt {
+    @include single-direction($spacing-values, "margin-top");
+}
+
 .ml {
     @include single-direction($spacing-values, "margin-left");
 }
