--- a/resources/scss/__variables.scss
+++ b/resources/scss/__variables.scss
@@ -18,4 +18,5 @@ $button-c: #abccd8;
 $button-gray: #eee;
 $button-disabled: #222;
 
-$box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+$box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
