--- a/resources/scss/detailpage.scss
+++ b/resources/scss/detailpage.scss
@@ -5,32 +5,32 @@
     width: 180px;
 
     &-placeholder {
-        position: relative;
-        overflow: hidden;
-        padding-top: 133%;
+        background-color: $surface-gray;
         border: 5px solid white;
         border-radius: 10px;
         box-shadow: $box-shadow;
-        background-color: $surface-gray;
+        overflow: hidden;
+        padding-top: 133%;
+        position: relative;
 
         img {
+            height: 100%;
+            object-fit: cover;
             position: absolute;
             top: 0;
             width: 100%;
-            height: 100%;
-            object-fit: cover;
         }
     }
 }
 
 .detail-info {
-    width: calc(100% - 180px);
     display: flex;
+    width: calc(100% - 180px);
 
     @media (max-width: 768px) {
+        flex-wrap: wrap;
         padding: 0.5rem;
         width: 100%;
-        flex-wrap: wrap;
     }
 
     &-general {
@@ -42,6 +42,12 @@
             width: 100%;
         }
 
+        .detail-description {
+            @media (max-width: 768px) {
+                margin-bottom: 1rem;
+            }
+        }
+
         .detail-title {
             @media (max-width: 768px) {
                 text-align: center;
@@ -49,18 +55,10 @@
         }
 
         .genre-menu-list {
-            margin-bottom: 0.5rem;
-
             @media (max-width: 768px) {
                 font-size: 12px;
             }
-        }
-
-        .detail-description {
-            @media (max-width: 768px) {
-                // display: none;
-                margin-bottom: 1rem;
-            }
+            margin-bottom: 0.5rem;
         }
     }
 
@@ -71,7 +69,6 @@
         @media (max-width: 768px) {
             padding-left: 0;
             width: 100%;
-            // display: none;
         }
     }
 
@@ -80,9 +77,9 @@
         margin-bottom: 1rem;
 
         &-heading {
-            white-space: nowrap;
             font-size: 14px;
             margin-right: 1rem;
+            white-space: nowrap;
         }
     }
 
@@ -101,18 +98,72 @@
 
     .more-button {
         cursor: pointer;
-        margin-bottom: 1rem;
         display: none;
         font-size: 14px;
         font-weight: bold;
+        margin-bottom: 1rem;
 
         @media (max-width: 768px) {
-            margin: auto;
             display: block;
+            margin: auto;
         }
     }
 }
 
 .chapterbox {
+    font-weight: 700;
     width: 100%;
+
+    &-heading {
+        font-size: 16px;
+        margin-bottom: 8px;
+    }
+
+    &-input {
+        border: 1px solid #3c3c3c4a;
+        border-radius: 8px 8px 0 0;
+        font-weight: 700;
+        height: 50px;
+        outline: none;
+        padding: 1rem;
+        width: 100%;
+
+        &:focus {
+            border-color: $primary;
+        }
+    }
+
+    &-list {
+        background-color: #eee;
+        border-bottom: 1px solid #3c3c3c4a;
+        border-left: 1px solid #3c3c3c4a;
+        border-radius: 0 0 8px 8px;
+        border-right: 1px solid #3c3c3c4a;
+        max-height: 417px;
+        min-height: 417px;
+        overflow-y: auto;
+        width: 100%;
+
+        .chapter {
+            background-color: $background;
+            border: 1px solid #eee;
+
+            &-link {
+                border: 4px solid $background;
+                display: flex;
+                justify-content: space-between;
+                line-height: 30px;
+                padding: 1px 10px;
+
+                &:hover {
+                    border-left: 4px solid $primary;
+                }
+            }
+        }
+    }
+}
+
+.higlight.chapter-link {
+    border-left: 4px solid $primary;
+    color: $primary;
 }
