--- a/resources/scss/detailpage.scss
+++ b/resources/scss/detailpage.scss
@@ -44,7 +44,12 @@
 
         .detail-description {
             @media (max-width: 768px) {
+                display: none;
                 margin-bottom: 1rem;
+
+                .active & {
+                    display: block;
+                }
             }
         }
 
@@ -56,7 +61,12 @@
 
         .genre-menu-list {
             @media (max-width: 768px) {
+                display: none;
                 font-size: 12px;
+
+                .active & {
+                    display: flex;
+                }
             }
             margin-bottom: 0.5rem;
         }
@@ -67,8 +77,13 @@
         width: 33.33%;
 
         @media (max-width: 768px) {
+            display: none;
             padding-left: 0;
             width: 100%;
+
+            .active & {
+                display: block;
+            }
         }
     }
 
@@ -108,6 +123,10 @@
             margin: auto;
         }
     }
+}
+
+.active.detail-info .more-button i {
+    transform: rotate(180deg);
 }
 
 .chapterbox {
