--- a/resources/scss/global.scss
+++ b/resources/scss/global.scss
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    scroll-behavior: smooth;
 }
 
 body {
