Update Style for disabled button - For better contrast

--- a/resources/scss/button.scss
+++ b/resources/scss/button.scss
@@ -30,7 +30,7 @@
         cursor: default;
         pointer-events: none;
         transform: none;
-        color: hover($button-disabled);
+        color: white;
         background-color: $button-disabled;
         opacity: 0.7;
     }
