--- a/resources/scss/detailpage.scss
+++ b/resources/scss/detailpage.scss
@@ -106,6 +106,10 @@
             justify-content: center;
         }
 
+        .bookmark i {
+            pointer-events: none;
+        }
+
         .button {
             margin-right: 0.5rem;
         }
@@ -122,6 +126,30 @@
             display: block;
             margin: auto;
         }
+    }
+}
+
+.active.bookmark i {
+    font-weight: 900;
+    animation: bounce-down 0.15s;
+    animation-timing-function: cubic-bezier(0, 0.63, 0.81, 1);
+}
+
+@keyframes bounce-down {
+    0% {
+        transform: translateY(0%);
+    }
+
+    30% {
+        transform: translateY(50%);
+    }
+
+    60% {
+        transform: translateY(-50%);
+    }
+
+    100% {
+        transform: translateY(0%);
     }
 }
 
