--- a/resources/scss/global.scss
+++ b/resources/scss/global.scss
@@ -31,6 +31,12 @@ li {
     opacity: 0.7;
 }
 
+.no-select {
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .line {
     &-1 {
         display: -webkit-box;
