--- a/resources/scss/genremenu.scss
+++ b/resources/scss/genremenu.scss
@@ -1,6 +1,24 @@
 @import "__variables";
 @import "__function";
 
+.aktif {
+    .genre-menu {
+        @media (max-width: 575px) {
+            &:nth-of-type(n + 14) {
+                display: flex;
+            }
+        }
+
+        &:nth-of-type(n + 24) {
+            display: flex;
+        }
+    }
+
+    .genre-button-more {
+        transform: rotate(180deg);
+    }
+}
+
 .genre-menu-heading {
     margin-bottom: 1rem;
 }
@@ -10,13 +28,9 @@
     flex-wrap: wrap;
 
     .genre-menu {
-        position: relative;
-        margin-right: 8px;
         margin-bottom: 8px;
-
-        &:nth-of-type(n + 24) {
-            display: none;
-        }
+        margin-right: 8px;
+        position: relative;
 
         @media (max-width: 575px) {
             &:nth-of-type(n + 14) {
@@ -24,60 +38,46 @@
             }
         }
 
-        &-checkbox {
+        &:nth-of-type(n + 24) {
+            display: none;
+        }
+
+        .genre-menu-button {
+            border: 1px solid transparent;
+            display: block;
+            font-weight: 400;
+            line-height: 30px;
+            padding: 0 8px;
+        }
+
+        .genre-menu-checkbox {
             cursor: pointer;
-            position: absolute;
-            width: 100%;
             height: 100%;
             opacity: 0;
+            position: absolute;
+            width: 100%;
+
+            &:checked ~ .genre-menu-button {
+                background-color: $primary;
+                color: white;
+            }
 
             &:focus ~ .genre-menu-button {
                 border: 1px solid black;
             }
-
-            &:checked ~ .genre-menu-button {
-                color: white;
-                background-color: $primary;
-            }
-        }
-
-        &-button {
-            padding: 0 8px;
-            border: 1px solid transparent;
-            display: block;
-            line-height: 30px;
-            font-weight: 400;
         }
     }
 
     .genre-button-more {
-        cursor: pointer;
-        border-radius: 50%;
-        width: 30px;
-        height: 30px;
-        display: flex !important;
         align-items: center;
-        justify-content: center;
-        color: $font-white;
         background-color: $surface-black;
+        border-radius: 50%;
+        color: $font-white;
+        cursor: pointer;
+        display: flex !important;
+        height: 30px;
+        justify-content: center;
         transition: 0.2s;
-    }
-}
-
-.aktif {
-    .genre-menu {
-        &:nth-of-type(n + 24) {
-            display: flex;
-        }
-
-        @media (max-width: 575px) {
-            &:nth-of-type(n + 14) {
-                display: flex;
-            }
-        }
-    }
-
-    .genre-button-more {
-        transform: rotate(180deg);
+        width: 30px;
     }
 }
