--- a/resources/scss/slideshow.scss
+++ b/resources/scss/slideshow.scss
@@ -23,30 +23,31 @@
     }
 
     &-bgimage {
+        background: no-repeat center/cover;
+        filter: blur(10px) brightness(20%);
         position: absolute;
         inset: -10%;
-        filter: blur(10px) brightness(20%);
-        background: no-repeat center/cover;
     }
 
     &-poster {
+        left: 750px;
         position: absolute;
         top: -60px;
-        left: 750px;
-        z-index: 1;
         transform: scale(1.2);
         width: 400px;
+        z-index: 1;
 
         @media (max-width: 1199px) {
-            top: -80px;
             left: 640px;
-            width: 400px;
+            top: -80px;
             transform: none;
+            width: 400px;
         }
 
         @media (max-width: 1023px) {
-            top: -80px;
+            left: auto;
             right: -70px;
+            top: -80px;
             width: 300px;
         }
 
@@ -55,14 +56,14 @@
         }
 
         @media (max-width: 575px) {
-            top: -50px;
             right: -50px;
+            top: -50px;
             width: 250px;
         }
 
         @media (max-width: 480px) {
-            top: -20px;
             right: -35px;
+            top: -20px;
             width: 180px;
         }
 
@@ -73,32 +74,32 @@
         }
 
         &-placeholder {
-            transform: rotate(15deg);
-            padding-top: 148%;
             border: 20px solid white;
             box-shadow: 0 30px 30px #0003;
+            padding-top: 148%;
+            transform: rotate(15deg);
 
             @media (max-width: 860px) {
                 border-width: 10px;
             }
 
             & img {
+                height: 100%;
+                object-fit: cover;
                 position: absolute;
                 inset: 0;
                 width: 100%;
-                height: 100%;
-                object-fit: cover;
             }
         }
     }
 
     &-detail {
-        position: absolute;
-        left: 30px;
         bottom: 50%;
-        transform: translateY(50%);
-        max-width: 500px;
         color: $font-white;
+        left: 30px;
+        max-width: 500px;
+        position: absolute;
+        transform: translateY(50%);
 
         @media (max-width: 1023px) {
             width: 460px;
@@ -113,9 +114,17 @@
             width: calc(100% - 180px);
         }
 
+        &-description {
+            margin-bottom: 1rem;
+
+            @media (max-width: 767px) {
+                display: none;
+            }
+        }
+
         &-title {
-            margin-bottom: 0.5rem;
             font-size: 24px;
+            margin-bottom: 0.5rem;
 
             @media (max-width: 767px) {
                 font-size: 20px;
@@ -123,14 +132,6 @@
 
             @media (max-width: 480px) {
                 margin-bottom: 0;
-            }
-        }
-
-        &-description {
-            margin-bottom: 1rem;
-
-            @media (max-width: 767px) {
-                display: none;
             }
         }
     }
@@ -143,18 +144,18 @@
             margin-right: 0.5rem;
 
             @media (max-width: 480px) {
-                margin-top: 0.5rem;
-                padding: 0 1rem;
                 font-size: 12px;
                 line-height: 35px;
+                margin-top: 0.5rem;
+                padding: 0 1rem;
             }
         }
     }
 
     & .swiper-nav {
+        bottom: 40px;
         position: absolute;
         right: 40px;
-        bottom: 40px;
         z-index: 1;
 
         @media (max-width: 1199px) {
