Change scss Folder Structure

--- a/resources/scss/components/button.scss
+++ b/resources/scss/components/button.scss
@@ -1,5 +1,5 @@
-@import "__variables";
-@import "__function";
+@import "../__variables";
+@import "../__function";
 
 .button {
     border-radius: 4px;
