--- a/resources/scss/global.scss
+++ b/resources/scss/global.scss
@@ -31,7 +31,8 @@ li {
 }
 
 .disabled {
-    opacity: 0.7;
+    opacity: 0.5;
+    pointer-events: none;
 }
 
 .no-select {
@@ -84,14 +85,17 @@ li {
 
 .breadcrumb-list {
     padding: 1rem 0;
-    margin-bottom: 1rem;
     display: flex;
     flex-wrap: wrap;
-}
 
-.breadcrumb:not(:first-of-type)::before {
-    content: "•";
-    margin: 0 0.5rem;
+    @media (max-width: 1400px) {
+        padding: 1rem;
+    }
+
+    .breadcrumb:not(:first-of-type)::before {
+        content: "•";
+        margin: 0 0.5rem;
+    }
 }
 
 .container {
