--- a/resources/scss/components/kontenx.scss
+++ b/resources/scss/components/kontenx.scss
@@ -16,18 +16,18 @@
 
         & .swiper-slide {
             margin-right: 7px;
-            width: calc(100% / 8);
+            width: calc((100% / 8) - 6.3px);
 
             @media (max-width: 1400px) {
-                width: calc(100% / 6);
+                width: calc((100% / 6) - 5.8px);
             }
 
             @media (max-width: 992px) {
-                width: calc(100% / 4);
+                width: calc((100% / 4) - 5.4px);
             }
 
             @media (max-width: 768px) {
-                width: calc(100% / 3);
+                width: calc((100% / 3) - 4.8px);
             }
         }
     }
